--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,11 @@
                 <artifactId>spring-web</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            <dependency>
+			    <groupId>cglib</groupId>
+			    <artifactId>cglib</artifactId>
+			    <version>2.2.2</version>
+			</dependency>
+
 	</dependencies>
 </project>
